- The "endpoint" label is now automatically added to the default HTTP server metrics, containing this endpoint routing route pattern of the request, unless there is a user-defined label already present with this name.
- HttpRequestLabelNames.All is now HttpRequestLabelNames.Default to better reflect the meaning of the property.
* 5.1.0
- Add support for adding custom label value providers to HTTP server metrics. #347
* 5.0.2
- Bugfix: HttpClientMetrics under concurrent load with long-running requests were leading to broken response streams. #336
* 5.0.1
- Bugfix: PowersOfTenDividedBuckets did not work with >= 10 buckets due to overlap. Now skips overlapping region of generated series.
* 5.0.0
- Added HTTP client metric that measures the response duration (time until response content reading is finished).
- Added "client" label containing the name of HTTP client to HTTP client metrics.
- Added "code" label with HTTP response code to HTTP client metrics. #299
- HTTP client metrics now count responses when they are completed, not when started, to match with HTTP server metrics. Also renamed metric to httpclient_requests_sent_total since it said "received" previously (due to copy-paste error from HTTP server metrics).
- HTTP client metrics are now published via the netstandard package, without requiring ASP.NET Core. #314
- Added Counter.IncTo[Current]TimeUtc().
* 4.2.0
- Added Histogram.PowersOfTenDividedBuckets()
- Improved accuracy of histogram bucket calculations to reduce the likelyhood of seeing 0.00000000000000000001 offsets from expected value due to floating point math.
- Added ConfigureAwait(false) to MetricHandler to help avoid deadlocks in some rare scenarios. #308
- Fix defect where MetricPusher terminated when HttpClient signaled timeout. #302, #293
- No longer need to manually reference ASP.NET Core SDK in csproj file when installing prometheus-net.AspNetCore library. It gets automatically referenced now. #267
* 4.1.1